// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL API if fetches the correct data for query "allRegions.graphql" 1`] = `
Object {
  "data": Object {
    "allRegions": Object {
      "itemsPerPage": 10,
      "page": 0,
      "regions": Array [
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 234947,
              "year": 2017,
            },
          ],
          "id": "110",
          "name": "Berlin",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 234947,
              "year": 2017,
            },
          ],
          "id": "11000",
          "name": "Berlin",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 234947,
              "year": 2017,
            },
          ],
          "id": "11000000",
          "name": "Berlin, Stadt",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 25708,
              "year": 2017,
            },
          ],
          "id": "11001001",
          "name": "Berlin-Mitte",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 28368,
              "year": 2017,
            },
          ],
          "id": "11002002",
          "name": "Berlin-Friedrichshain-Kreuzberg",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 33360,
              "year": 2017,
            },
          ],
          "id": "11003003",
          "name": "Berlin-Pankow",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 26589,
              "year": 2017,
            },
          ],
          "id": "11004004",
          "name": "Berlin-Charlottenburg-Wilmersdorf",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 9244,
              "year": 2017,
            },
          ],
          "id": "11005005",
          "name": "Berlin-Spandau",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 25361,
              "year": 2017,
            },
          ],
          "id": "11006006",
          "name": "Berlin-Steglitz-Zehlendorf",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 27956,
              "year": 2017,
            },
          ],
          "id": "11007007",
          "name": "Berlin-Tempelhof-Schöneberg",
        },
      ],
      "total": 15,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "allRegions_page1.graphql" 1`] = `
Object {
  "data": Object {
    "allRegions": Object {
      "itemsPerPage": 10,
      "page": 1,
      "regions": Array [
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 18446,
              "year": 2017,
            },
          ],
          "id": "11008008",
          "name": "Berlin-Neukölln",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 12168,
              "year": 2017,
            },
          ],
          "id": "11009009",
          "name": "Berlin-Treptow-Köpenick",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 5621,
              "year": 2017,
            },
          ],
          "id": "11010010",
          "name": "Berlin-Marzahn-Hellersdorf",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 9821,
              "year": 2017,
            },
          ],
          "id": "11011011",
          "name": "Berlin-Lichtenberg",
        },
        Object {
          "WAHL09": Array [
            Object {
              "PART04": "B90_GRUENE",
              "value": 12305,
              "year": 2017,
            },
          ],
          "id": "11012012",
          "name": "Berlin-Reinickendorf",
        },
      ],
      "total": 15,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "allRegions_page1_100items.graphql" 1`] = `
Object {
  "data": Object {
    "allRegions": Object {
      "itemsPerPage": 100,
      "page": 1,
      "regions": Array [],
      "total": 15,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_BETR08_WAHL09_Nmeasures.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "BETR08": Array [
        Object {
          "source": Object {
            "name": "41120",
            "title_de": "Allgemeine Agrarstrukturerhebung (bis 2007)",
          },
          "value": 37,
          "year": 2001,
        },
        Object {
          "source": Object {
            "name": "41120",
            "title_de": "Allgemeine Agrarstrukturerhebung (bis 2007)",
          },
          "value": 33,
          "year": 2003,
        },
      ],
      "WAHL04": Array [
        Object {
          "value": 1159666,
          "year": 2014,
        },
        Object {
          "value": 1159666,
          "year": 2014,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_BETR08_withAlias.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "BETR08": Array [
        Object {
          "TIERA8": 8,
          "source": Object {
            "name": "41120",
            "title_de": "Allgemeine Agrarstrukturerhebung (bis 2007)",
          },
          "year": 2001,
        },
        Object {
          "TIERA8": 9,
          "source": Object {
            "name": "41120",
            "title_de": "Allgemeine Agrarstrukturerhebung (bis 2007)",
          },
          "year": 2003,
        },
        Object {
          "TIERA8": 11,
          "source": Object {
            "name": "41120",
            "title_de": "Allgemeine Agrarstrukturerhebung (bis 2007)",
          },
          "year": 2007,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_BEV001_sourceStatistic.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "BEV001": Array [
        Object {
          "ALTMT1": null,
          "value": 9878,
          "year": 1995,
        },
        Object {
          "ALTMT1": null,
          "value": 11088,
          "year": 1996,
        },
        Object {
          "ALTMT1": null,
          "value": 12046,
          "year": 1997,
        },
        Object {
          "ALTMT1": null,
          "value": 12246,
          "year": 1998,
        },
        Object {
          "ALTMT1": null,
          "value": 12589,
          "year": 1999,
        },
        Object {
          "ALTMT1": null,
          "value": 13319,
          "year": 2000,
        },
        Object {
          "ALTMT1": null,
          "value": 12968,
          "year": 2001,
        },
        Object {
          "ALTMT1": null,
          "value": 12504,
          "year": 2002,
        },
        Object {
          "ALTMT1": null,
          "value": 12782,
          "year": 2003,
        },
        Object {
          "ALTMT1": null,
          "value": 13045,
          "year": 2004,
        },
        Object {
          "ALTMT1": null,
          "value": 12357,
          "year": 2005,
        },
        Object {
          "ALTMT1": null,
          "value": 12638,
          "year": 2006,
        },
        Object {
          "ALTMT1": null,
          "value": 12786,
          "year": 2007,
        },
        Object {
          "ALTMT1": null,
          "value": 13098,
          "year": 2008,
        },
        Object {
          "ALTMT1": null,
          "value": 13014,
          "year": 2009,
        },
        Object {
          "ALTMT1": null,
          "value": 13337,
          "year": 2010,
        },
        Object {
          "ALTMT1": null,
          "value": 12638,
          "year": 2011,
        },
        Object {
          "ALTMT1": null,
          "value": 12715,
          "year": 2012,
        },
        Object {
          "ALTMT1": null,
          "value": 12560,
          "year": 2013,
        },
        Object {
          "ALTMT1": null,
          "value": 12830,
          "year": 2014,
        },
        Object {
          "ALTMT1": null,
          "value": 13298,
          "year": 2015,
        },
        Object {
          "ALTMT1": null,
          "value": 13442,
          "year": 2016,
        },
        Object {
          "ALTMT1": null,
          "value": 13081,
          "year": 2017,
        },
      ],
      "id": "13",
      "name": "Mecklenburg-Vorpommern",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_BEVSTD_sourceStatistic.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "BEVSTD": Array [
        Object {
          "value": 87276,
          "year": 1995,
        },
        Object {
          "value": 86630,
          "year": 1996,
        },
        Object {
          "value": 85547,
          "year": 1997,
        },
        Object {
          "value": 84742,
          "year": 1998,
        },
        Object {
          "value": 84449,
          "year": 1999,
        },
        Object {
          "value": 84281,
          "year": 2000,
        },
        Object {
          "value": 84480,
          "year": 2001,
        },
        Object {
          "value": 84704,
          "year": 2002,
        },
        Object {
          "value": 85300,
          "year": 2003,
        },
        Object {
          "value": 85762,
          "year": 2004,
        },
        Object {
          "value": 86080,
          "year": 2005,
        },
        Object {
          "value": 86630,
          "year": 2006,
        },
        Object {
          "value": 87792,
          "year": 2007,
        },
        Object {
          "value": 88718,
          "year": 2008,
        },
        Object {
          "value": 88502,
          "year": 2009,
        },
        Object {
          "value": 88759,
          "year": 2010,
        },
        Object {
          "value": 82801,
          "year": 2011,
        },
        Object {
          "value": 83462,
          "year": 2012,
        },
        Object {
          "value": 83971,
          "year": 2013,
        },
        Object {
          "value": 84694,
          "year": 2014,
        },
        Object {
          "value": 85942,
          "year": 2015,
        },
        Object {
          "value": 87432,
          "year": 2016,
        },
        Object {
          "value": 88519,
          "year": 2017,
        },
        Object {
          "value": 89504,
          "year": 2018,
        },
      ],
      "id": "01001",
      "name": "Flensburg, Kreisfreie Stadt",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": "SPD",
          "value": 334253,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09_1year.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": null,
          "value": 1869042,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09_1year_1dim.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": "SPD",
          "value": 334253,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09_Nyears.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": null,
          "value": 1787721,
          "year": 2013,
        },
        Object {
          "PART04": null,
          "value": 1869042,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09_Nyears_Ndims.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": "CDU",
          "value": 508643,
          "year": 2013,
        },
        Object {
          "PART04": "SPD",
          "value": 439387,
          "year": 2013,
        },
        Object {
          "PART04": "CDU",
          "value": 424321,
          "year": 2017,
        },
        Object {
          "PART04": "SPD",
          "value": 334253,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_WAHL09_siftFilter.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "WAHL09": Array [
        Object {
          "PART04": null,
          "value": 1869042,
          "year": 2017,
        },
        Object {
          "PART04": "B90_GRUENE",
          "value": 234947,
          "year": 2017,
        },
        Object {
          "PART04": "DIELINKE",
          "value": 351170,
          "year": 2017,
        },
        Object {
          "PART04": "FDP",
          "value": 167046,
          "year": 2017,
        },
        Object {
          "PART04": "SONSTIGE",
          "value": 132135,
          "year": 2017,
        },
        Object {
          "PART04": "SPD",
          "value": 334253,
          "year": 2017,
        },
      ],
      "id": "11",
      "name": "Berlin",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API if fetches the correct data for query "region_fragment.graphql" 1`] = `
Object {
  "data": Object {
    "region": Object {
      "name": "Saarland",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
